--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,6 @@ jobs:
             - name: Deploy to Firebase
             uses: w9jds/firebase-action@master
             with:
-                args: deploy --only hosting
+                args: deploy --project bt3103-week-10-grocery-axios --only hosting
             env:
                 FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
