--- a/.github/workflows/gitActions.yml
+++ b/.github/workflows/gitActions.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Deploy to Firebase
         uses: w9jds/firebase-action@master
         with:
-          args: eploy --project bt3103-week-10-grocery-axios --only hosting
+          args: deploy --project bt3103-week-10-grocery-axios --only hosting
         env:
           FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
 
